services/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: n8n
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
      - env:
        - name: N8N_HOST
          value: n8n.completeautomate.com
        - name: WEBHOOK_URL
          value: https://n8n.completeautomate.com
        - name: N8N_PROTOCOL
          value: https
        - name: N8N_PORT
          value: '5678'
        - name: N8N_BASIC_AUTH_ACTIVE
          value: 'true'
        - name: N8N_BASIC_AUTH_USER
          value: vimal
        - name: N8N_BASIC_AUTH_PASSWORD
          valueFrom:
            secretKeyRef:
              name: n8n-secret
              key: auth-password
        image: n8nio/n8n:latest
        imagePullPolicy: Always
        name: n8n
        ports:
        - containerPort: 5678
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/node/.n8n
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: n8n-data
