services/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: authelia-add-https@kubernetescrd,authelia-authelia-forwardauth@kubernetescrd
  generation: 3
  name: n8n
  namespace: n8n
spec:
  ingressClassName: traefik
  rules:
  - host: n8n.homelab.local
    http:
      paths:
      - backend:
          service:
            name: n8n
            port:
              number: 5678
        path: /
        pathType: Prefix
  - host: n8n.completeautomate.com
    http:
      paths:
      - backend:
          service:
            name: n8n
            port:
              number: 5678
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - n8n.homelab.local
    - n8n.completeautomate.com
